<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/appbg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/identy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:hint="Enter Id"
            android:inputType="numberDecimal"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="Enter Name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="100dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:hint="Enter Name"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="Enter Email"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="100dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="Enter Mobile no."
            android:layout_marginTop="10dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="100dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/mobile"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:text="@string/add_user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="30dp"
        android:onClick="addUser"
        android:layout_marginTop="30dp" />

    <Button
        android:text="@string/view_data"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:textSize="18sp"
        android:onClick="viewdata"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold|italic" />

    </RelativeLayout>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText4"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="Current Name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText5"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:hint="New Name" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="0dp"
        android:onClick="update"
        android:text="@string/update"
        android:textStyle="normal|bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText6"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Enter ID to Delete Data" />

    <Button
        android:text="@string/delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:id="@+id/button4"
        android:onClick="delete"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:textStyle="normal|bold"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText7"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="Enter ID to Search" />

        <Button
            android:text="@string/search"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="21dp"
            android:layout_marginEnd="21dp"
            android:id="@+id/button5"
            android:onClick="searc"
            android:layout_marginStart="210dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</LinearLayout>